@@ -5,6 +5,8 @@ version 1.3:
 	- gpomme: added configuration GUI, courtesy of Daniel G. SIEGEL.
 	- gpomme: added elegant-bright and elegant-dark themes, courtesy
 	of Natanael Arndt <arndtn@gmx.de>.
+	- pommed: rewrote CD ejection routine; no longer depends on eject,
+	sends the dbus notification before ejecting the CD.
 
 version 1.2:
 	- pommed: PowerBook5,5 has an ADB keyboard, not a USB keyboard.
